package study.java.dio.desafio_03.iPhone.Aplicativo;

public interface Funcionalidade {
    void telaRotacionar();
    void telaScroll();
}
